get general data from source -> client req ajax

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,2 +1,30 @@
-<h1>{{title}}</h1>
-<p>Welcome to {{title}}</p>
+<div class="container">
+
+<!--General Info-->
+    <div class="row">
+        <div class="col-4">
+        <div class="h2">Compare</div>
+        </div>
+        <div id="product1" class="col-4">
+            <div class="input-group mb-3">
+                <input id="lazada-product-link" type="text" class="form-control" placeholder="https://www.lazada.vn/products/apple-iphone-7-32gb-rose-gold-i150511251-s158185707.html">
+                <div class="input-group-append">
+                    <button id="add-product1" class="btn btn-outline-secondary" type="button">Add</button>
+                </div>
+            </div>
+        </div>
+        <div id="product2" class="col-4">
+            <div class="input-group mb-3">
+                <input id="lazada-product-link" type="text" class="form-control" placeholder="https://www.lazada.vn/products/apple-iphone-7-32gb-rose-gold-i150511251-s158185707.html">
+                <div class="input-group-append">
+                    <button id="add-product2" class="btn btn-outline-secondary" type="button">Add</button>
+                </div>
+            </div>
+        </div>
+    </div>
+<!---->
+
+
+</div>
+
+<script src="/javascripts/product.js" ></script>
