--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,30 +1,35 @@
 <div class="container">
 
-<!--General Info-->
+    <!--General Info-->
     <div class="row">
         <div class="col-4">
-        <div class="h2">Compare</div>
+            <div class="h2">Compare</div>
         </div>
         <div id="product1" class="col-4">
             <div class="input-group mb-3">
-                <input id="lazada-product-link" type="text" class="form-control" placeholder="https://www.lazada.vn/products/apple-iphone-7-32gb-rose-gold-i150511251-s158185707.html">
+                <input id="lazada-product-link" type="text" class="form-control"
+                       value="https://www.lazada.vn/products/apple-iphone-7-32gb-rose-gold-i150511251-s158185707.html">
                 <div class="input-group-append">
                     <button id="add-product1" class="btn btn-outline-secondary" type="button">Add</button>
                 </div>
             </div>
+            {{> general_product_details }}
+
         </div>
         <div id="product2" class="col-4">
             <div class="input-group mb-3">
-                <input id="lazada-product-link" type="text" class="form-control" placeholder="https://www.lazada.vn/products/apple-iphone-7-32gb-rose-gold-i150511251-s158185707.html">
+                <input id="lazada-product-link" type="text" class="form-control"
+                       placeholder="https://www.lazada.vn/products/apple-iphone-7-32gb-rose-gold-i150511251-s158185707.html">
                 <div class="input-group-append">
                     <button id="add-product2" class="btn btn-outline-secondary" type="button">Add</button>
                 </div>
             </div>
+            {{> general_product_details }}
         </div>
     </div>
-<!---->
+    <!---->
 
 
 </div>
 
-<script src="/javascripts/product.js" ></script>
+<script src="/javascripts/product.js"></script>
